docs: mark Phase 11 + 17 complete, clean up STATE.md and ROADMAP.md
- Update ROADMAP.md: Phase 11 complete (3/3 plans, 2026-02-12)
- Update ROADMAP.md: Phase 17 plans marked done
- Fix Phase 11 plan list to reflect actual 3-plan split
- Clean up STATE.md: fix progress counter, remove stale entries
- Add Phase 11 research, verification, and plan artifacts
- Add Phase 17 plans, summary, and verification artifacts
- Add REQUIREMENTS.md

--- a/.planning/phases/11-rename-fix-settings-foundation/11-01-PLAN.md
+++ b/.planning/phases/11-rename-fix-settings-foundation/11-01-PLAN.md
@@ -7,8 +7,13 @@ depends_on: []
 files_modified:
   - rulez_ui/src-tauri/tauri.conf.json
   - rulez_ui/src-tauri/src/commands/config.rs
+  - rulez_ui/src-tauri/src/commands/debug.rs
   - rulez_ui/src/components/simulator/DebugSimulator.tsx
+  - rulez_ui/src/lib/tauri.ts
   - rulez_ui/src/lib/mock-data.ts
+  - rulez_ui/src/lib/schema.ts
+  - rulez_ui/src/types/index.ts
+  - rulez_ui/public/schema/hooks-schema.json
   - cch_cli/src/logging.rs
 autonomous: true
 must_haves:
@@ -16,6 +21,8 @@ must_haves:
     - "Window title and simulator copy refer to RuleZ, not CCH"
     - "New config templates and mock configs describe RuleZ configuration"
     - "Default audit log path resolves to ~/.claude/logs/rulez.log"
+    - "Shell command scope name and command target RuleZ"
+    - "No user-facing RuleZ UI/command/config descriptions mention CCH"
   artifacts:
     - path: "rulez_ui/src-tauri/tauri.conf.json"
       provides: "RuleZ window title and shell scope label"
@@ -32,6 +39,10 @@ must_haves:
       to: "app.windows[0].title"
       via: "window title"
       pattern: "RuleZ UI"
+    - from: "rulez_ui/src-tauri/tauri.conf.json"
+      to: "app.shell.scope"
+      via: "scope name and command"
+      pattern: "rulez"
     - from: "cch_cli/src/logging.rs"
       to: "Logger::default_log_path"
       via: "log file basename"
@@ -56,8 +67,13 @@ Output: Updated UI labels, config templates, and default log path.
 @.planning/phases/11-rename-fix-settings-foundation/11-RESEARCH.md
 @rulez_ui/src-tauri/tauri.conf.json
 @rulez_ui/src-tauri/src/commands/config.rs
+@rulez_ui/src-tauri/src/commands/debug.rs
 @rulez_ui/src/components/simulator/DebugSimulator.tsx
+@rulez_ui/src/lib/tauri.ts
 @rulez_ui/src/lib/mock-data.ts
+@rulez_ui/src/lib/schema.ts
+@rulez_ui/src/types/index.ts
+@rulez_ui/public/schema/hooks-schema.json
 @cch_cli/src/logging.rs
 </context>
 
@@ -66,9 +82,9 @@ Output: Updated UI labels, config templates, and default log path.
 <task type="auto">
   <name>Task 1: Update user-facing RuleZ labels and templates</name>
   <files>rulez_ui/src-tauri/tauri.conf.json, rulez_ui/src-tauri/src/commands/config.rs, rulez_ui/src/components/simulator/DebugSimulator.tsx, rulez_ui/src/lib/mock-data.ts</files>
-  <action>Replace user-visible CCH references with RuleZ: update the Tauri window title to RuleZ wording, adjust the default config template header in config.rs, update the debug simulator helper text, and rename mock config strings to RuleZ. Keep non-user-facing code structure unchanged.</action>
-  <verify>Open the UI strings in these files and confirm no user-visible "CCH" remains.</verify>
-  <done>Window title and simulator copy show RuleZ; new config templates and mock configs reference RuleZ.</done>
+  <action>Replace user-visible CCH references with RuleZ: update the Tauri window title to RuleZ wording, update the shell scope name and command target in tauri.conf.json from cch to rulez, adjust the default config template header in config.rs, update the debug simulator helper text, and rename mock config strings to RuleZ. Keep non-user-facing code structure unchanged.</action>
+  <verify>Open the UI strings in these files and confirm no user-visible "CCH" remains, and the tauri.conf.json shell scope uses rulez for name/command.</verify>
+  <done>Window title and simulator copy show RuleZ; shell scope name/command are rulez; new config templates and mock configs reference RuleZ.</done>
 </task>
 
 <task type="auto">
@@ -79,15 +95,25 @@ Output: Updated UI labels, config templates, and default log path.
   <done>Default log path uses rulez.log and the comment matches.</done>
 </task>
 
+<task type="auto">
+  <name>Task 3: Sweep remaining UI/command/config strings for CCH</name>
+  <files>rulez_ui/src-tauri/src/commands/debug.rs, rulez_ui/src/lib/tauri.ts, rulez_ui/src/lib/schema.ts, rulez_ui/src/types/index.ts, rulez_ui/public/schema/hooks-schema.json</files>
+  <action>Run a global search for user-facing "CCH"/"cch" references in RuleZ UI, command descriptions, and config-path text, then update remaining labels and messages to RuleZ. Preserve internal binary names or file paths that must stay cch for execution; only user-visible copy should change.</action>
+  <verify>rg -n "CCH|cch" rulez_ui/src rulez_ui/src-tauri/src/commands rulez_ui/public/schema</verify>
+  <done>Remaining user-facing UI/command/config labels and descriptions use RuleZ and no unintended CCH labels remain in these areas.</done>
+</task>
+
 </tasks>
 
 <verification>
 - Manual scan confirms no user-visible CCH labels remain in the touched UI strings.
+- Global search confirms remaining CCH hits in RuleZ UI/command/config files are intentional (non-user-facing) or removed.
 - Default log path is rulez.log in the CLI logger.
 </verification>
 
 <success_criteria>
 - Window title, simulator copy, and default config templates display RuleZ naming.
+- RuleZ UI/command/config descriptions no longer show CCH in user-facing copy.
 - New audit logs go to ~/.claude/logs/rulez.log by default.
 </success_criteria>
 
