--- a/.planning/phases/11-rename-fix-settings-foundation/11-02-PLAN.md
+++ b/.planning/phases/11-rename-fix-settings-foundation/11-02-PLAN.md
@@ -11,19 +11,12 @@ files_modified:
   - rulez_ui/src-tauri/src/main.rs
   - rulez_ui/src/lib/settings.ts
   - rulez_ui/src/stores/settingsStore.ts
-  - rulez_ui/src/stores/uiStore.ts
-  - rulez_ui/src/App.tsx
-  - rulez_ui/src/components/ui/ThemeToggle.tsx
-  - rulez_ui/src/components/editor/YamlEditor.tsx
-  - rulez_ui/src/components/layout/Header.tsx
-  - rulez_ui/src/components/layout/RightPanel.tsx
-  - rulez_ui/src/components/settings/SettingsPanel.tsx
   - rulez_ui/src-tauri/src/commands/debug.rs
+  - rulez_ui/src-tauri/src/commands/validate.rs
   - rulez_ui/src/lib/tauri.ts
 autonomous: true
 must_haves:
   truths:
-    - "Settings panel lets the user set theme, editor font size/tab size, and RuleZ binary path"
     - "Theme and editor preferences persist across app restarts"
     - "Debug/validate commands use RuleZ with a stored or PATH-resolved binary path"
   artifacts:
@@ -31,29 +24,19 @@ must_haves:
       provides: "Store wrapper with defaults and web fallback"
     - path: "rulez_ui/src/stores/settingsStore.ts"
       provides: "Persisted settings state for theme/editor/binary path"
-    - path: "rulez_ui/src/components/settings/SettingsPanel.tsx"
-      provides: "Settings UI for theme/editor/binary path"
-    - path: "rulez_ui/src/components/editor/YamlEditor.tsx"
-      provides: "Editor options bound to settings"
     - path: "rulez_ui/src-tauri/src/commands/debug.rs"
       provides: "RuleZ command execution with resolved binary path"
+    - path: "rulez_ui/src-tauri/src/commands/validate.rs"
+      provides: "RuleZ validate command execution with resolved binary path"
   key_links:
-    - from: "rulez_ui/src/components/settings/SettingsPanel.tsx"
-      to: "rulez_ui/src/stores/settingsStore.ts"
-      via: "setTheme/setEditorFontSize/setEditorTabSize/setRulezBinaryPath"
-      pattern: "useSettingsStore"
-    - from: "rulez_ui/src/stores/settingsStore.ts"
-      to: "rulez_ui/src/components/editor/YamlEditor.tsx"
-      via: "editor options"
-      pattern: "fontSize|tabSize"
     - from: "rulez_ui/src-tauri/src/commands/debug.rs"
       to: "settings.json"
       via: "rulezBinaryPath lookup"
       pattern: "rulezBinaryPath"
-    - from: "rulez_ui/src/App.tsx"
-      to: "rulez_ui/src/stores/settingsStore.ts"
-      via: "initial settings load"
-      pattern: "loadSettings"
+    - from: "rulez_ui/src-tauri/src/commands/validate.rs"
+      to: "settings.json"
+      via: "rulezBinaryPath lookup"
+      pattern: "rulezBinaryPath"
 ---
 
 <objective>
@@ -72,13 +55,8 @@ Output: Persisted settings (theme/editor/binary path), UI controls, and backend 
 @.planning/STATE.md
 @.planning/ROADMAP.md
 @.planning/phases/11-rename-fix-settings-foundation/11-RESEARCH.md
-@rulez_ui/src/stores/uiStore.ts
-@rulez_ui/src/components/layout/RightPanel.tsx
-@rulez_ui/src/components/layout/Header.tsx
-@rulez_ui/src/components/ui/ThemeToggle.tsx
-@rulez_ui/src/components/editor/YamlEditor.tsx
-@rulez_ui/src/App.tsx
 @rulez_ui/src-tauri/src/commands/debug.rs
+@rulez_ui/src-tauri/src/commands/validate.rs
 @rulez_ui/src-tauri/src/main.rs
 @rulez_ui/src-tauri/Cargo.toml
 @rulez_ui/package.json
@@ -96,17 +74,9 @@ Output: Persisted settings (theme/editor/binary path), UI controls, and backend 
 </task>
 
 <task type="auto">
-  <name>Task 2: Build settings panel and wire editor/theme preferences</name>
-  <files>rulez_ui/src/components/settings/SettingsPanel.tsx, rulez_ui/src/components/layout/RightPanel.tsx, rulez_ui/src/components/layout/Header.tsx, rulez_ui/src/stores/uiStore.ts, rulez_ui/src/App.tsx, rulez_ui/src/components/ui/ThemeToggle.tsx, rulez_ui/src/components/editor/YamlEditor.tsx</files>
-  <action>Create a SettingsPanel component that edits theme (light/dark/system), editor font size, editor tab size, and RuleZ binary path. Add a Settings tab to the right panel (extend RightPanelTab in uiStore), and add a header button to open the Settings tab. Load settings on app start and apply theme to the document. Update ThemeToggle and YamlEditor to read from settingsStore so preferences apply instantly.</action>
-  <verify>Open the app UI: Settings tab shows controls; changing values updates theme and editor options.</verify>
-  <done>Settings panel exists, theme/editor preferences apply live, and settings changes persist via settingsStore.</done>
-</task>
-
-<task type="auto">
-  <name>Task 3: Resolve RuleZ binary path for debug/validate commands</name>
-  <files>rulez_ui/src-tauri/src/commands/debug.rs, rulez_ui/src/lib/tauri.ts</files>
-  <action>Rename command execution to RuleZ and introduce binary path resolution: read rulezBinaryPath from the settings store file, fall back to PATH lookup for "rulez" when unset, and use the resolved path in Command::new. Update error messages and comments to RuleZ. Keep JSON parsing behavior unchanged.</action>
+  <name>Task 2: Resolve RuleZ binary path for debug/validate commands</name>
+  <files>rulez_ui/src-tauri/src/commands/debug.rs, rulez_ui/src-tauri/src/commands/validate.rs, rulez_ui/src/lib/tauri.ts</files>
+  <action>Rename command execution to RuleZ and introduce binary path resolution for both debug and validate: read rulezBinaryPath from the settings store file, fall back to PATH lookup for "rulez" when unset, and use the resolved path in Command::new. Update error messages and comments to RuleZ in both command modules. Keep JSON parsing behavior unchanged.</action>
   <verify>Invoke debug/validate in Tauri mode with and without a configured binary path and confirm successful execution or a RuleZ-specific error.</verify>
   <done>Debug/validate runs rulez using a stored path when set, otherwise PATH-resolves with a clear fallback error.</done>
 </task>
@@ -114,12 +84,11 @@ Output: Persisted settings (theme/editor/binary path), UI controls, and backend 
 </tasks>
 
 <verification>
-- Settings persist across reloads, including editor font/tab size and theme.
 - Debug/validate uses rulez with auto-detected or configured binary path.
+- Settings store persists theme/editor defaults for downstream UI wiring.
 </verification>
 
 <success_criteria>
-- Settings panel provides theme, editor preferences, and binary path configuration.
 - Settings are persisted via Tauri Store (with localStorage fallback in web mode).
 - Backend uses RuleZ binary with PATH auto-detect when unset.
 </success_criteria>
